# claude-dash

./: .gitignore  AGENTS.md  ARCHITECTURE.md  V2_FEATURE_MAP.md  package-lock.json  package.json  project_state.md  proxy.ts  vercel.json
.claude/agents/: README.md  _TEMPLATE.md
app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  not-found.tsx
docs/: sleep-alarm-setup.md
hooks/: useBusinessActivity.ts  useBusinessAgentArtifacts.ts  useBusinessAgents.ts  useBusinessRevenue.ts  useBusinessTasks.ts  useBusinesses.ts  useDailyContext.ts  useDimensionLogs.ts  useFinances.ts  useGoalMetrics.ts  useGoalMilestones.ts  useGoals.ts  useHealth.ts  useHealthBaselines.ts  useJournal.ts  useLinkedChats.ts  useLog.ts  useLongTermGoals.ts  useMarketingExperiments.ts  useMedications.ts  useMeditation.ts  useMesocycle.ts  useMoneyFlow.ts  useMorningBriefing.ts  useNetWorth.ts  useOptimization.ts  useOverseer.ts  useOverseerInsights.ts  useProtein.ts  useRealtimeSubscription.ts  useSettings.ts  useStack.ts  useStackInsights.ts  useWakeConfirm.ts  useWeeklyReview.ts  useWeight.ts  useWishlist.ts  useWorkout.ts
lib/: design-tokens.ts  fmt.ts  haptic.ts  nav.ts  scoring.ts  units.ts  useAnimatedNumber.ts
public/: manifest.json  sw.js
rowan-watch/: README.md
scripts/: backup.ts  com.colinvinson.jarvis-bridge.plist  com.colinvinson.rowan-backup.plist  install-backup.sh  install-bridge.sh  jarvis-bridge.ts  set-password.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: lib.rs  main.rs
(+263 files in other folders)
