[package]
name = "jarvis-desktop"
version = "0.1.0"
description = "Jarvis native desktop shell"
authors = ["Colin Vinson"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "jarvis_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.0.14"
enigo = "0.3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
